# astronat

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
astronat/: __init__.py  _astropy_init.py  common.py  conftest.py
astronat/constants/: __init__.py  _frozen.py  setup_package.py  values.py
astronat/constants/data/: __init__.py
astronat/constants/tests/: test_frozen.py  test_init_subpackages.py  test_values.py
astronat/core/: __init__.py  cosmo.py  distance.py  optics.py  photometry.py  setup_package.py
astronat/core/tests/: __init__.py
astronat/dynamics/: __init__.py  common.py  potential.py  vesc.py
astronat/dynamics/coordinates/: __init__.py  attributes.py  ic.py  representations.py  transformations.py
astronat/dynamics/tests/: __init__.py  test_potential.py  test_vesc.py
astronat/phot/: __init__.py
astronat/phot/MegaCam_PanSTARRS/: __init__.py
astronat/sc/: __init__.py  core.py
astronat/sc/tests/: __init__.py
astronat/tests/: __init__.py  test_init_subpackages.py
astronat/units/: __init__.py  amuse.py  composite.py  convert.py  core.py  decorators.py  full_amuse.py  setup_package.py
astronat/units/symbolic/: __init__.py  astro.py  base.py  state.py  unit_definitions.py  utils.py
astronat/units/tests/: __init__.py  test_amuse.py  test_composite.py  test_core.py  test_decorators.py  test_full_amuse.py
astronat/utils/: __init__.py  convert.py  modeling.py  typing.py
astronat/utils/data/: __init__.py  core.py  crossmatch.py  xmatch.py
astronat/utils/table/: __init__.py  core.py  (+1 more)
docs/: conf.py  credits.rst  index.rst
docs/astronat/: index.rst  sc.rst
docs/documentation/: benefits.rst  code_quality.rst  installation.rst  testing.rst
docs/examples/: Galpy Composite Potentials.ipynb  OrbitOffsetFrame.ipynb  OrbitSkyOffsetFrame.ipynb  XMatch.ipynb
docs/whatsnew/: 0.1.rst  index.rst  planned.rst
licenses/: LICENSE.rst
(+23 files in other folders)
