[metadata]
name = astronat
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/astronat
description = Astronomy concomitant tools. Astropy powered.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/astronat

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    scipy
    utilipy @ git+https://github.com/nstarman/utilipy.git
    extension_helpers

[options.extras_require]
test =
    pytest-astropy
    astropy
docs =
    sphinx-astropy
    astropy

[options.package_data]
* = */data/*
astronat = data/*

[tool:pytest]
testpaths = "astronat" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    astronat/_astropy_init*
    astronat/conftest.py
    astronat/*setup_package*
    astronat/tests/*
    astronat/*/tests/*
    astronat/extern/*
    astronat/version*
    */astronat/_astropy_init*
    */astronat/conftest.py
    */astronat/*setup_package*
    */astronat/tests/*
    */astronat/*/tests/*
    */astronat/extern/*
    */astronat/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
